--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Image search</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <div class="container">
-        <div class="forms">
-            <input type="text" id="inputFild">
-            <button id="btn">Search image</button>
+    <header>
+        <h1>Image Search App</h1>
+        <div class="text">
+            <input  id="search" type="text"  placeholder="Search for images..">
+            <button class="btn">search</button>
         </div>
-        <div class="data-image">
+    </header>
+    <main class="container">
+        
+    </main>
 
-        </div>
-    </div>
-   
+
+    
+    <button class="load_more">Add more image</button>
+
     <script src="script.js"></script>
-
 </body>
-
 </html>
